# cpp-1year-itmo

./: README.md
labwork01/: CMakeLists.txt  main.cpp
labwork02/lib/: number.cpp  number.h
labwork02/tests/: CMakeLists.txt
labwork04/: CMakeLists.txt  README.md  main.cpp
labwork05/lib/: ArgParser.cpp  ArgParser.h
labwork05/tests/: argparser_test.cpp
labwork06/example/: config.json  config.xml  config.yaml
labwork06/lib/: parser.cpp
labwork06/tests/: test_format.cpp  test_parser.cpp
labwork07/: CMakeLists.txt  Frame.cpp  Frame.h  ID3v2.cpp  ID3v2.h  main.cpp
labwork08/: CMakeLists.txt
labwork08/lib/: CCircularBuffer.cpp  CCircularBuffer.h  CMakeLists.txt
labwork08/tests/: CMakeLists.txt  test_buffer.cpp
labwork09/: CMakeLists.txt  allocator.h
labwork10/: CMakeLists.txt  WeatherForecast.cpp  WeatherForecast.h  config.json  dotenv.cpp  dotenv.h  main.cpp
labwork11/: CMakeLists.txt
labwork11/lib/: CMakeLists.txt  stl-algorithms.cpp  stl-algorithms.h  xrange.cpp  xrange.h  zip.cpp  zip.h
labwork11/tests/: CMakeLists.txt  test_algorithms.cpp
labwork12/: CMakeLists.txt
labwork12/lib/: CMakeLists.txt  database.cpp  database.h  dbexcept.h  table.cpp  table.h  topostfix.cpp  topostfix.h  tuple.h
labwork12/tests/: CMakeLists.txt  test_db.cpp
